--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,8 +33,6 @@
     dest: "{{ cme_src_dir }}"
     version: "{{ cme_repo_version }}"
     recursive: true
-    force: true
-  changed_when: false
   register: clone_cme
 
 - block:
@@ -59,7 +57,7 @@
         chdir: "{{ cme_src_dir }}"
       environment:
         WORKON_HOME: "{{ cme_shared_virtualenvs_dir }}"
-  when: "clone_cme.before != clone_cme.after"
+  when: "clone_cme is changed"
 
 - name: Create shell script for cme
   template:
