--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,20 +3,12 @@ dependency:
   name: galaxy
 driver:
   name: docker
-lint:
-  name: yamllint
 platforms:
   - name: kali-cme
-    image: kalilinux/kali-linux-docker
+    image: kalilinux/kali-rolling
 provisioner:
   name: ansible
-  lint:
-    name: ansible-lint
-scenario:
-  name: default
 verifier:
-  name: testinfra
+  name: ansible
   options:
     v: true
-  lint:
-    name: flake8
