Migrate role to Python 3

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -2,12 +2,13 @@
 # vars file for ansible-role-crackmapexec
 
 cme_packages:
+  - build-essential
   - git
   - libssl-dev
   - libffi-dev
-  - python-dev
-  - python-pip
-  - build-essential
+  - python3-apt
+  - python3-dev
+  - python3-pip
 
 cme_repo_url: "https://github.com/byt3bl33d3r/CrackMapExec.git"
 cme_repo_version: master
